[tool.poetry]
name = "events_web_app"
version = "0.1.0"
description = ""
authors = ["Mohammad Mostafa <muhammad.mostafa.33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8.6"
django-baton = "^1.13.2"
django-crispy-forms = "^1.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
